# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//unknown/browser/ai_chat/android/sources.gni")
import("//unknown/browser/autocomplete/sources.gni")
import("//unknown/browser/brave_account/android/sources.gni")
import("//unknown/browser/brave_news/sources.gni")
import("//unknown/browser/brave_referrals/sources.gni")
import("//unknown/browser/brave_rewards/android/sources.gni")
import("//unknown/browser/brave_shields/sources.gni")
import("//unknown/browser/brave_vpn/sources.gni")
import("//unknown/browser/browsing_data/sources.gni")
import("//unknown/browser/cosmetic_filters/sources.gni")
import("//unknown/browser/debounce/sources.gni")
import("//unknown/browser/download/sources.gni")
import("//unknown/browser/ephemeral_storage/sources.gni")
import("//unknown/browser/gcm_driver/sources.gni")
import("//unknown/browser/infobars/sources.gni")
import("//unknown/browser/misc_metrics/sources.gni")
import("//unknown/browser/net/sources.gni")
import("//unknown/browser/new_tab/sources.gni")
import("//unknown/browser/notifications/sources.gni")
import("//unknown/browser/onboarding/sources.gni")
import("//unknown/browser/perf/sources.gni")
import("//unknown/browser/permissions/sources.gni")
import("//unknown/browser/playlist/sources.gni")
import("//unknown/browser/profiles/sources.gni")
import("//unknown/browser/renderer_context_menu/sources.gni")
import("//unknown/browser/request_otr/sources.gni")
import("//unknown/browser/search_engines/sources.gni")
import("//unknown/browser/sync/sources.gni")
import("//unknown/browser/themes/sources.gni")
import("//unknown/browser/ui/config.gni")
import("//unknown/browser/updater/buildflags.gni")
import("//unknown/browser/url_sanitizer/sources.gni")
import("//unknown/browser/web_discovery/sources.gni")
import("//unknown/browser/webcompat_reporter/sources.gni")
import("//unknown/build/config.gni")
import("//unknown/chromium_src/chrome/browser/prefs/sources.gni")
import("//unknown/chromium_src/chrome/browser/sources.gni")
import("//unknown/components/ai_chat/core/common/buildflags/buildflags.gni")
import("//unknown/components/ai_rewriter/common/buildflags/buildflags.gni")
import("//unknown/components/brave_education/buildflags.gni")
import("//unknown/components/brave_vpn/common/buildflags/buildflags.gni")
import("//unknown/components/brave_wallet/common/buildflags/buildflags.gni")
import("//unknown/components/brave_wayback_machine/buildflags/buildflags.gni")
import("//unknown/components/commander/common/buildflags/buildflags.gni")
import("//unknown/components/containers/buildflags/buildflags.gni")
import("//unknown/components/psst/buildflags/buildflags.gni")
import("//unknown/components/tor/buildflags/buildflags.gni")
import("//unknown/components/web_discovery/buildflags/buildflags.gni")
import("//chrome/browser/buildflags.gni")
import("//extensions/buildflags/buildflags.gni")
import("//printing/buildflags/buildflags.gni")

if (enable_brave_wallet) {
  import("//unknown/browser/brave_wallet/android/sources.gni")
  import("//unknown/browser/brave_wallet/notifications/sources.gni")
}

brave_chrome_browser_visibility = [
  "//unknown/browser/*",
  "//unknown/test:*",

  # Chrome does not yet define a visibility list by itself, meaning we can't
  # append our list to them and that what we have here will become law not just
  # for Brave, but also for the rest of chrome. Thus, we need to provide our own
  # permissive list for chrome here too, to be removed in the future if Chrome
  # ever provides it's own list (at which point we'll append instead of set).
  "//chrome:dependencies",
  "//chrome/app/*",
  "//chrome/test/*",
  "//extensions/*",
]

brave_chrome_browser_sources = [
  "//unknown/browser/brave_browser_features.cc",
  "//unknown/browser/brave_browser_features.h",
  "//unknown/browser/brave_browser_main_extra_parts.cc",
  "//unknown/browser/brave_browser_main_extra_parts.h",
  "//unknown/browser/brave_browser_main_parts.cc",
  "//unknown/browser/brave_browser_main_parts.h",
  "//unknown/browser/brave_browser_process.cc",
  "//unknown/browser/brave_browser_process_impl.cc",
  "//unknown/browser/brave_browser_process_impl.h",
  "//unknown/browser/brave_content_browser_client.cc",
  "//unknown/browser/brave_content_browser_client.h",
  "//unknown/browser/brave_local_state_prefs.cc",
  "//unknown/browser/brave_local_state_prefs.h",
  "//unknown/browser/brave_profile_prefs.cc",
  "//unknown/browser/brave_profile_prefs.h",
  "//unknown/browser/brave_shell_integration.cc",
  "//unknown/browser/brave_shell_integration.h",
  "//unknown/browser/brave_tab_helpers.cc",
  "//unknown/browser/brave_tab_helpers.h",
  "//unknown/browser/browser_context_keyed_service_factories.cc",
  "//unknown/browser/browser_context_keyed_service_factories.h",
  "//unknown/browser/geolocation/brave_geolocation_permission_context_delegate.cc",
  "//unknown/browser/geolocation/brave_geolocation_permission_context_delegate.h",
  "//unknown/browser/metrics/brave_metrics_service_accessor.cc",
  "//unknown/browser/metrics/brave_metrics_service_accessor.h",
  "//unknown/browser/metrics/metrics_reporting_util.cc",
  "//unknown/browser/metrics/metrics_reporting_util.h",
  "//unknown/browser/policy/brave_simple_policy_map.h",
  "//unknown/browser/prefs/brave_pref_service_incognito_allowlist.cc",
  "//unknown/browser/prefs/brave_pref_service_incognito_allowlist.h",
  "//unknown/browser/translate/brave_translate_prefs_migration.cc",
  "//unknown/browser/translate/brave_translate_prefs_migration.h",
  "//unknown/browser/translate/brave_translate_utils.cc",
  "//unknown/browser/translate/brave_translate_utils.h",
  "//unknown/browser/update_util.cc",
  "//unknown/browser/update_util.h",
  "//unknown/chromium_src/chrome/browser/notifications/notification_handler_impl.h",
]

if (enable_brave_wallet) {
  brave_chrome_browser_sources += [
    "//unknown/browser/brave_wallet/wallet_data_files_installer_delegate_impl.cc",
    "//unknown/browser/brave_wallet/wallet_data_files_installer_delegate_impl.h",
  ]
}

brave_chrome_browser_deps = [
  "//base",
  "//unknown/app:brave_generated_resources_grit",
  "//unknown/browser:browser_process",
  "//unknown/browser:sparkle_buildflags",
  "//unknown/browser/brave_account",
  "//unknown/browser/brave_adaptive_captcha",
  "//unknown/browser/brave_adaptive_captcha:impl",
  "//unknown/browser/brave_ads",
  "//unknown/browser/brave_ads:impl",
  "//unknown/browser/brave_ads/creatives/search_result_ad",
  "//unknown/browser/brave_ads/tabs",
  "//unknown/browser/brave_origin",
  "//unknown/browser/brave_rewards:brave_rewards_impl",
  "//unknown/browser/brave_rewards:util",
  "//unknown/browser/brave_search",
  "//unknown/browser/brave_stats",
  "//unknown/browser/component_updater",
  "//unknown/browser/email_aliases",
  "//unknown/browser/metrics/buildflags",
  "//unknown/browser/misc_metrics",
  "//unknown/browser/misc_metrics:misc_metrics_impl",
  "//unknown/browser/ntp_background",
  "//unknown/browser/policy/handlers",
  "//unknown/browser/skus",
  "//unknown/browser/sync",
  "//unknown/browser/themes",
  "//unknown/browser/ui",
  "//unknown/browser/ui/webui/ads_internals",
  "//unknown/browser/ui/webui/brave_account",
  "//unknown/browser/ui/webui/email_aliases",
  "//unknown/browser/updater:buildflags",
  "//unknown/common",
  "//unknown/common:mojo_bindings",
  "//unknown/components/ai_chat/core/common/buildflags",
  "//unknown/components/ai_rewriter/common/buildflags",
  "//unknown/components/body_sniffer",
  "//unknown/components/brave_account",
  "//unknown/components/brave_account:features",
  "//unknown/components/brave_account/mojom",
  "//unknown/components/brave_adaptive_captcha",
  "//unknown/components/brave_ads/browser",
  "//unknown/components/brave_ads/core",
  "//unknown/components/brave_component_updater/browser",
  "//unknown/components/brave_education:buildflags",
  "//unknown/components/brave_new_tab_ui:mojom",
  "//unknown/components/brave_news/common:mojom",
  "//unknown/components/brave_origin",
  "//unknown/components/brave_perf_predictor/browser",
  "//unknown/components/brave_policy",
  "//unknown/components/brave_policy/ad_block_only_mode",
  "//unknown/components/brave_private_new_tab_ui/common",
  "//unknown/components/brave_private_new_tab_ui/common:mojom",
  "//unknown/components/brave_referrals/browser",
  "//unknown/components/brave_rewards/core",
  "//unknown/components/brave_rewards/core:features",
  "//unknown/components/brave_rewards/core/buildflags",
  "//unknown/components/brave_rewards/core/mojom",
  "//unknown/components/brave_rewards/core/mojom:webui",
  "//unknown/components/brave_search/browser",
  "//unknown/components/brave_search/common",
  "//unknown/components/brave_search/common:mojom",
  "//unknown/components/brave_shields/core/common",
  "//unknown/components/brave_shields/core/common:mojom",
  "//unknown/components/brave_sync",
  "//unknown/components/brave_sync:features",
  "//unknown/components/brave_sync:network_time_helper",
  "//unknown/components/brave_sync:prefs",
  "//unknown/components/brave_user_agent/browser",
  "//unknown/components/brave_user_agent/common",
  "//unknown/components/brave_vpn/common/buildflags",
  "//unknown/components/brave_vpn/common/mojom",
  "//unknown/components/brave_wallet/common/buildflags",
  "//unknown/components/brave_wayback_machine/buildflags",
  "//unknown/components/commander/common/buildflags",
  "//unknown/components/constants",
  "//unknown/components/containers/buildflags",
  "//unknown/components/cosmetic_filters/browser",
  "//unknown/components/cosmetic_filters/common:mojom",
  "//unknown/components/de_amp/browser",
  "//unknown/components/de_amp/common",
  "//unknown/components/debounce/content/browser",
  "//unknown/components/email_aliases:features",
  "//unknown/components/email_aliases:mojom",
  "//unknown/components/email_aliases:service",
  "//unknown/components/global_privacy_control",
  "//unknown/components/google_sign_in_permission",
  "//unknown/components/https_upgrade_exceptions/browser",
  "//unknown/components/ipfs",
  "//unknown/components/ipfs/buildflags",
  "//unknown/components/l10n/common",
  "//unknown/components/ntp_background_images/browser",
  "//unknown/components/ntp_background_images/buildflags",
  "//unknown/components/ntp_background_images/common",
  "//unknown/components/ntp_tiles",
  "//unknown/components/p3a",
  "//unknown/components/p3a_utils",
  "//unknown/components/password_strength_meter:mojom",
  "//unknown/components/playlist/core/common/buildflags",
  "//unknown/components/privacy_sandbox",
  "//unknown/components/request_otr/common/buildflags",
  "//unknown/components/resources",
  "//unknown/components/skus/browser",
  "//unknown/components/skus/common",
  "//unknown/components/skus/common:mojom",
  "//unknown/components/speech_to_text",
  "//unknown/components/speech_to_text:buildflags",
  "//unknown/components/speedreader/common/buildflags",
  "//unknown/components/tor/buildflags",
  "//unknown/components/v8/buildflags",
  "//unknown/components/version_info",
  "//unknown/components/web_discovery/buildflags",
  "//unknown/components/webcompat/content/browser",
  "//unknown/components/webcompat/core/common",
  "//unknown/extensions:common",
  "//unknown/services/network/public/cpp",
  "//unknown/third_party/blink/renderer",
  "//chrome/browser:browser_process",
  "//chrome/browser/profiles:profile",
  "//chrome/browser/ui",
  "//chrome/common",
  "//chrome/common:channel_info",
  "//chrome/utility",
  "//components/account_id",
  "//components/autofill/core/common",
  "//components/browsing_data/core",
  "//components/content_settings/browser",
  "//components/content_settings/core/browser",
  "//components/content_settings/core/common",
  "//components/embedder_support",
  "//components/feed/core/shared_prefs:feed_shared_prefs",
  "//components/gcm_driver:gcm_buildflags",
  "//components/metrics",
  "//components/ntp_tiles",
  "//components/ntp_tiles:pref_names",
  "//components/omnibox/browser",
  "//components/password_manager/core/common",
  "//components/permissions",
  "//components/policy/core/common:common_constants",
  "//components/pref_registry",
  "//components/prefs",
  "//components/privacy_sandbox:privacy_sandbox_prefs",
  "//components/safe_browsing/core/common:safe_browsing_prefs",
  "//components/search_engines",
  "//components/services/heap_profiling/public/mojom",
  "//components/signin/public/base",
  "//components/sync/base",
  "//components/sync/service",
  "//components/translate/core/browser:translate_pref_names",
  "//components/version_info",
  "//components/version_info:channel",
  "//content/public/browser",
  "//content/public/common",
  "//extensions/buildflags",
  "//mojo/public/cpp/bindings",
  "//net",
  "//services/metrics/public/cpp:metrics_cpp",
  "//services/network/public/cpp",
  "//third_party/abseil-cpp:absl",
  "//third_party/blink/public/mojom:mojom_platform_headers",
  "//third_party/widevine/cdm:buildflags",
  "//ui/base",
  "//url",
]

if (enable_psst) {
  brave_chrome_browser_deps += [
    "//unknown/browser/psst",
    "//unknown/components/psst/browser/content",
    "//unknown/components/psst/browser/core",
    "//unknown/components/psst/common",
  ]
}

if (enable_brave_wallet) {
  brave_chrome_browser_deps += [
    "//unknown/browser/brave_wallet",
    "//unknown/browser/brave_wallet:brave_wallet_delegate",
    "//unknown/browser/brave_wallet:tab_helper",
    "//unknown/components/brave_wallet/browser",
    "//unknown/components/brave_wallet/browser:pref_names",
    "//unknown/components/brave_wallet/browser:utils",
    "//unknown/components/brave_wallet/common",
    "//unknown/components/brave_wallet/common:mojom",
    "//unknown/components/decentralized_dns/content",
    "//unknown/components/decentralized_dns/core",
  ]
}

if (!is_android) {
  # Already included on android by upstream

  # Including v2 back into brave build as we make use of `feed::FetchRssLinks` in `brave_news_tab_helper.cc`.
  brave_chrome_browser_sources += [
    "feed/feed_service_factory.cc",
    "feed/feed_service_factory.h",
    "feed/rss_links_fetcher.cc",
    "feed/rss_links_fetcher.h",
    "feed/web_feed_page_information_fetcher.cc",
    "feed/web_feed_page_information_fetcher.h",
    "feed/web_feed_tab_helper.cc",
    "feed/web_feed_tab_helper.h",
    "feed/web_feed_ui_util.cc",
    "feed/web_feed_ui_util.h",
    "feed/web_feed_util.cc",
    "feed/web_feed_util.h",
  ]

  brave_chrome_browser_deps += [
    "//unknown/browser/ui/split_view",
    "//unknown/browser/ui/tabs:impl",
    "//unknown/browser/ui/webui/brave_new_tab_page_refresh",
    "//unknown/browser/ui/webui/brave_new_tab_page_refresh:mojom",
    "//unknown/browser/ui/webui/brave_news_internals",
    "//unknown/browser/ui/webui/brave_welcome_page",
    "//unknown/browser/user_education:features",
    "//unknown/ui/webui/brave_color_change_listener",
    "//chrome/browser/regional_capabilities",
    "//chrome/browser/ui/thumbnails",
    "//components/feed:feature_list",
    "//components/feed/core/v2:feed_core_v2",
    "//components/feed/mojom:mojo_bindings",
    "//components/regional_capabilities",
  ]
}

if (enable_brave_education) {
  brave_chrome_browser_deps += [ "//unknown/browser/ui/webui/brave_education" ]
}

if (enable_ai_chat) {
  brave_chrome_browser_deps += [
    "//unknown/browser/ai_chat",
    "//unknown/browser/ai_chat/ollama",
    "//unknown/browser/ui/webui/ai_chat",
    "//unknown/components/ai_chat/content/browser",
    "//unknown/components/ai_chat/core/browser",
    "//unknown/components/ai_chat/core/common",
    "//unknown/components/ai_chat/core/common/mojom",
  ]

  if (!is_android) {
    brave_chrome_browser_deps += [ "//unknown/browser/ui/ai_chat" ]
  }
}

if (enable_ai_chat && is_android) {
  brave_chrome_browser_sources += brave_browser_ai_chat_android_sources
  brave_chrome_browser_deps += brave_browser_ai_chat_android_deps
}

if (enable_containers) {
  brave_chrome_browser_deps += [
    "//unknown/components/containers/core/browser",
    "//unknown/components/containers/core/common",
  ]
}

if (enable_commander) {
  brave_chrome_browser_deps += [
    "//unknown/components/commander/browser",
    "//unknown/components/commands/browser",
    "//unknown/components/commands/common",
  ]
}

if (is_mac) {
  brave_chrome_browser_sources += [
    "//unknown/browser/brave_app_controller_mac.h",
    "//unknown/browser/brave_app_controller_mac.mm",
    "//unknown/browser/brave_browser_main_parts_mac.h",
    "//unknown/browser/brave_browser_main_parts_mac.mm",
    "//unknown/browser/brave_shell_integration_mac.h",
    "//unknown/browser/brave_shell_integration_mac.mm",
    "//unknown/browser/mac/keystone_glue.h",
    "//unknown/browser/mac/keystone_glue.mm",
    "//unknown/browser/mac/keystone_registration.h",
    "//unknown/browser/mac/keystone_registration.mm",
  ]
  brave_chrome_browser_deps += [
    "//unknown/app:command_ids",
    "//unknown/browser:sparkle_buildflags",
    "//unknown/browser/updater:buildflags",
    "//chrome:strings",
    "//chrome/app:generated_resources",
    "//chrome/common:non_code_constants",
  ]
  brave_chrome_framework_contents = []
}

if (enable_sparkle) {
  brave_chrome_browser_sources += [
    "//unknown/browser/mac/sparkle_glue.h",
    "//unknown/browser/mac/sparkle_glue.mm",
    "//unknown/browser/mac/su_updater.h",
  ]
  brave_chrome_framework_contents += [ "Frameworks" ]
}

if (enable_omaha4) {
  brave_chrome_browser_sources += [
    "//unknown/browser/brave_browser_main_extra_parts_p3a.cc",
    "//unknown/browser/brave_browser_main_extra_parts_p3a.h",
  ]
  brave_chrome_browser_deps += [
    "//unknown/browser/updater:features",
    "//unknown/browser/updater:p3a",
  ]
}

if (enable_speedreader) {
  brave_chrome_browser_deps += [
    "//unknown/browser/speedreader",
    "//unknown/browser/ui/speedreader",
  ]
}

if (enable_request_otr) {
  brave_chrome_browser_deps += [ "//unknown/components/request_otr/common" ]
}

if (enable_ai_rewriter) {
  brave_chrome_browser_deps += [ "//unknown/components/ai_rewriter/common" ]
}

if (enable_web_discovery_native) {
  brave_chrome_browser_deps += [
    "//unknown/browser/web_discovery",
    "//unknown/components/web_discovery/browser",
    "//unknown/components/web_discovery/common",
  ]
}

if (enable_brave_vpn) {
  brave_chrome_browser_deps += [
    "//unknown/components/brave_vpn/browser",
    "//unknown/components/brave_vpn/browser/connection",
    "//unknown/components/brave_vpn/browser/connection:api",
    "//unknown/components/brave_vpn/common",
  ]
}

if (is_android) {
  brave_chrome_browser_sources += [
    "//unknown/browser/android/brave_init_android.cc",
    "//unknown/browser/password_manager/android/password_ui_view_android.cc",
    "//unknown/browser/password_manager/android/password_ui_view_android.h",
    "//unknown/browser/sync/brave_sync_devices_android.cc",
    "//unknown/browser/sync/brave_sync_devices_android.h",
    "//chrome/browser/bookmarks/bookmark_html_writer.cc",
    "//chrome/browser/bookmarks/bookmark_html_writer.h",
    "//chrome/browser/importer/profile_writer.cc",
    "//chrome/browser/importer/profile_writer.h",
  ]

  brave_chrome_browser_sources += brave_browser_brave_account_android_sources
  brave_chrome_browser_sources += brave_browser_brave_rewards_android_sources
  brave_chrome_browser_sources += brave_browser_misc_metrics_android_sources
  brave_chrome_browser_deps += brave_browser_brave_account_android_deps

  if (enable_brave_wallet) {
    brave_chrome_browser_sources += brave_browser_brave_wallet_android_sources
    brave_chrome_browser_deps += brave_browser_brave_wallet_android_deps
  }

  brave_chrome_browser_deps += [
    "//unknown/browser/android:android_browser_process",
    "//unknown/browser/android:tabs_impl",
    "//unknown/browser/android/preferences",
    "//unknown/browser/android/safe_browsing:buildflags",
    "//unknown/browser/android/youtube_script_injector",
    "//unknown/browser/android/youtube_script_injector:features",
    "//unknown/browser/brave_ads/android",
    "//unknown/browser/download/android:jni_headers",
    "//unknown/browser/ntp_background/android",
    "//unknown/browser/password_entry_edit/android",
    "//unknown/browser/ui/webui/new_tab_takeover/android:new_tab_takeover",
    "//unknown/build/android:jni_headers",
    "//unknown/components/brave_sync:sync_service_impl_helper",
    "//chrome/android:jni_headers",
    "//chrome/browser/password_manager/android:jni_headers",
    "//components/password_manager/core/browser/import:importer",
    "//components/sync_device_info",
  ]
} else {
  brave_chrome_browser_sources += [
    "//unknown/browser/p3a/p3a_core_metrics.cc",
    "//unknown/browser/p3a/p3a_core_metrics.h",
    "//unknown/browser/profile_resetter/brave_profile_resetter.cc",
    "//unknown/browser/profile_resetter/brave_profile_resetter.h",
  ]

  brave_chrome_browser_deps += [
    "//unknown/app:brave_generated_resources_grit",
    "//unknown/browser/brave_ads/tooltips",
    "//unknown/browser/importer",
    "//unknown/components/brave_search_conversion",
    "//unknown/components/time_period_storage",
    "//components/infobars/content",
  ]
}

if (toolkit_views) {
  brave_chrome_browser_sources += brave_browser_onboarding_sources

  brave_chrome_browser_deps += brave_browser_onboarding_deps
  brave_chrome_browser_deps += [
    "//unknown/browser/ui/darker_theme",
    "//unknown/components/sidebar/browser",
  ]
}

if (enable_extensions) {
  brave_chrome_browser_deps += [
    "//unknown/browser/extensions",
    "//chrome/browser/extensions",
    "//extensions/browser",
    "//extensions/common:common_constants",
  ]
}

if (enable_brave_wayback_machine) {
  brave_chrome_browser_deps += [ "//unknown/components/brave_wayback_machine" ]
}

if (enable_tor) {
  brave_chrome_browser_deps += [
    "//unknown/browser/tor",
    "//unknown/browser/tor:impl",
    "//unknown/components/tor",
    "//unknown/components/tor:common",
    "//unknown/components/tor:pref_names",
  ]
}

if (enable_widevine) {
  brave_chrome_browser_sources += [
    "//unknown/browser/brave_drm_tab_helper.cc",
    "//unknown/browser/brave_drm_tab_helper.h",
  ]
  brave_chrome_browser_deps += [
    "//unknown/browser/widevine",
    "//unknown/components/brave_drm",
    "//unknown/components/widevine:constants",
  ]
}

if (is_win) {
  brave_chrome_browser_sources += [
    "//unknown/browser/brave_shell_integration_win.cc",
    "//unknown/browser/brave_shell_integration_win.h",
    "//unknown/browser/default_protocol_handler_utils_win.cc",
    "//unknown/browser/default_protocol_handler_utils_win.h",
  ]

  brave_chrome_browser_deps += [
    "//unknown/components/windows_recall",
    "//chrome/install_static:install_static_util",
    "//chrome/installer/util:with_no_strings",
  ]
}

if (is_win || is_android) {
  brave_chrome_browser_sources += [
    "//unknown/browser/day_zero_browser_ui_expt/day_zero_browser_ui_expt_manager.cc",
    "//unknown/browser/day_zero_browser_ui_expt/day_zero_browser_ui_expt_manager.h",
    "//unknown/browser/day_zero_browser_ui_expt/pref_names.h",
  ]
}

if (is_win && is_official_build) {
  brave_chrome_browser_sources += [
    "//chrome/browser/google/google_update_win.cc",
    "//chrome/browser/google/google_update_win.h",
    "//chrome/browser/google/switches.cc",
    "//chrome/browser/google/switches.h",
  ]
}

brave_chrome_browser_public_deps = [
  "//unknown/app/vector_icons",
  "//unknown/browser:browser_process",
  "//unknown/browser/resources/bookmark_icon:bookmark_icon_resources",
  "//unknown/common/importer:interfaces",
  "//unknown/components/brave_sync:constants",
  "//unknown/components/psst/buildflags",
  "//unknown/components/v8/buildflags",
  "//unknown/components/variations",
]

if (is_mac) {
  brave_chrome_framework_public_deps = [ "//brave:framework_bundle_data" ]
  brave_chrome_framework_bundle_deps = [ "//brave:framework_bundle_data" ]
}

brave_chrome_browser_sources += brave_browser_profiles_sources
brave_chrome_browser_sources += brave_browser_autocomplete_sources
brave_chrome_browser_sources += brave_browser_brave_news_sources
brave_chrome_browser_sources += brave_browser_brave_referrals_sources
brave_chrome_browser_sources += brave_browser_brave_shields_sources
brave_chrome_browser_sources += brave_browser_brave_vpn_sources
brave_chrome_browser_sources += brave_browser_browsing_data_sources
brave_chrome_browser_sources += brave_browser_cosmetic_filters_sources
brave_chrome_browser_sources += brave_browser_debounce_sources
brave_chrome_browser_sources += brave_browser_download_sources
brave_chrome_browser_sources += brave_browser_ephemeral_storage_sources
brave_chrome_browser_sources += brave_browser_gcm_driver_sources
brave_chrome_browser_sources += brave_browser_infobar_sources
brave_chrome_browser_sources += brave_browser_misc_metrics_sources
brave_chrome_browser_sources += brave_browser_net_sources
brave_chrome_browser_sources += brave_browser_new_tab_sources
brave_chrome_browser_sources += brave_browser_notifications_sources
brave_chrome_browser_sources += brave_browser_perf_sources
brave_chrome_browser_sources += brave_browser_permissions_sources
brave_chrome_browser_sources += brave_browser_playlist_sources
brave_chrome_browser_sources += brave_browser_renderer_context_menu_sources
brave_chrome_browser_sources += brave_browser_request_otr_sources
brave_chrome_browser_sources += brave_browser_search_engines_sources
brave_chrome_browser_sources += brave_browser_sync_sources
brave_chrome_browser_sources += brave_browser_themes_sources
brave_chrome_browser_sources += brave_browser_url_sanitizer_sources
brave_chrome_browser_sources += brave_browser_web_discovery_sources
brave_chrome_browser_sources += brave_browser_webcompat_reporter_sources

brave_chrome_browser_deps += brave_browser_autocomplete_deps
brave_chrome_browser_deps += brave_browser_brave_news_deps
brave_chrome_browser_deps += brave_browser_brave_referrals_deps
brave_chrome_browser_deps += brave_browser_brave_shields_deps
brave_chrome_browser_deps += brave_browser_brave_vpn_deps
brave_chrome_browser_deps += brave_browser_browsing_data_deps
brave_chrome_browser_deps += brave_browser_cosmetic_filters_deps
brave_chrome_browser_deps += brave_browser_debounce_deps
brave_chrome_browser_deps += brave_browser_download_deps
brave_chrome_browser_deps += brave_browser_ephemeral_storage_deps
brave_chrome_browser_deps += brave_browser_gcm_driver_deps
brave_chrome_browser_deps += brave_browser_infobar_deps
brave_chrome_browser_deps += brave_browser_misc_metrics_deps
brave_chrome_browser_deps += brave_browser_net_deps
brave_chrome_browser_deps += brave_browser_new_tab_deps
brave_chrome_browser_deps += brave_browser_notifications_deps
brave_chrome_browser_deps += brave_browser_perf_deps
brave_chrome_browser_deps += brave_browser_permissions_deps
brave_chrome_browser_deps += brave_browser_playlist_deps
brave_chrome_browser_deps += brave_browser_renderer_context_menu_deps
brave_chrome_browser_deps += brave_browser_request_otr_deps
brave_chrome_browser_deps += brave_browser_search_engines_deps
brave_chrome_browser_deps += brave_browser_sync_deps
brave_chrome_browser_deps += brave_browser_themes_deps
brave_chrome_browser_deps += brave_browser_url_sanitizer_deps
brave_chrome_browser_deps += brave_browser_web_discovery_deps
brave_chrome_browser_deps += brave_browser_webcompat_reporter_deps
brave_chrome_browser_deps += brave_chromium_src_chrome_browser_deps
brave_chrome_browser_deps += brave_chromium_src_chrome_browser_prefs_deps

if (enable_brave_wallet) {
  brave_chrome_browser_sources += brave_browser_brave_wallet_sources
  brave_chrome_browser_deps += brave_browser_brave_wallet_deps
}

brave_chrome_browser_ui_allow_circular_includes_from = [ "//unknown/browser/ui" ]
brave_chrome_browser_ui_allow_circular_includes_from +=
    brave_ui_allow_circular_includes_from

brave_chrome_browser_allow_circular_includes_from = [
  "//unknown/browser/ui",
  "//unknown/browser/brave_ads:impl",
  "//unknown/browser/brave_ads/creatives/search_result_ad",
  "//unknown/browser/brave_stats",
  "//unknown/browser/ntp_background",
]

if (enable_ai_chat) {
  # TODO(https://github.com/brave/brave-browser/issues/50507):
  # Remove this once webui/ai_chat does not depend on chrome/browser.
  brave_chrome_browser_allow_circular_includes_from +=
      [ "//unknown/browser/ui/webui/ai_chat" ]
}

if (enable_brave_ai_chat_agent_profile) {
  brave_chrome_browser_deps +=
      [ "//unknown/browser/ai_chat:ai_chat_agent_profile_impl" ]
  brave_chrome_browser_allow_circular_includes_from +=
      [ "//unknown/browser/ai_chat:ai_chat_agent_profile_impl" ]
}

if (toolkit_views) {
  brave_chrome_browser_deps += [
    "//unknown/browser/ui/sidebar",
    "//unknown/browser/ui/views/location_bar",
    "//unknown/browser/ui/views/page_info",
  ]
  brave_chrome_browser_allow_circular_includes_from += [
    "//unknown/browser/ui/sidebar",
    "//unknown/browser/ui/views/location_bar",

    # TODO(https://github.com/brave/brave-browser/issues/50542): Remove this
    # once a target has been created for `//unknown/browser/brave_shields`.
    "//unknown/browser/ui/views/page_info",
  ]
}

# https://github.com/brave/brave-browser/issues/41418
if (enable_extensions) {
  brave_chrome_browser_deps +=
      [ "//unknown/browser/extensions:brave_prefs_util_impl" ]
  brave_chrome_browser_allow_circular_includes_from +=
      [ "//unknown/browser/extensions:brave_prefs_util_impl" ]
}

if (enable_ai_chat && enable_print_preview) {
  brave_chrome_browser_deps += [
    "//unknown/browser/ai_chat:print_preview_extractor",
    "//unknown/browser/ai_chat:print_preview_extractor_internal",
  ]
  brave_chrome_browser_allow_circular_includes_from +=
      [ "//unknown/browser/ai_chat:print_preview_extractor_internal" ]
}

# https://github.com/brave/brave-browser/issues/41464
if (enable_tor) {
  brave_chrome_browser_deps += [ "//unknown/browser/tor:util" ]
  brave_chrome_browser_allow_circular_includes_from +=
      [ "//unknown/browser/tor:util" ]
}

# https://github.com/brave/brave-browser/issues/10644
if (enable_widevine) {
  brave_chrome_browser_deps += [ "//unknown/browser/widevine" ]
  brave_chrome_browser_allow_circular_includes_from +=
      [ "//unknown/browser/widevine" ]
}

# https://github.com/brave/brave-browser/issues/41486
if (is_android) {
  brave_chrome_browser_allow_circular_includes_from += [
    "//unknown/browser/android:android_browser_process",
    "//unknown/browser/android:tabs_impl",
    "//unknown/browser/android/preferences",
  ]
}

# TODO(https://github.com/brave/brave-browser/issues/43310):
# brave_new_tab_page_ui.cc includes some headers (e.g. from
# //unknown/browser/new_tab) that are currently in the //chrome/browser target.
if (!is_android) {
  brave_chrome_browser_allow_circular_includes_from +=
      [ "//unknown/browser/ui/webui/brave_new_tab_page_refresh" ]
}

if (is_mac) {
  brave_chrome_browser_deps += [ "//unknown/browser/upgrade_when_idle" ]
  brave_chrome_browser_allow_circular_includes_from +=
      [ "//unknown/browser/upgrade_when_idle" ]
}
