# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

brave_chrome_common_sources = [
  "//unknown/common/brave_channel_info.cc",
  "//unknown/common/brave_channel_info.h",
  "//unknown/common/pref_names.h",
  "//unknown/common/resource_bundle_helper.cc",
  "//unknown/common/resource_bundle_helper.h",
]

brave_chrome_common_deps = [
  "//base",
  "//unknown/common:mojo_bindings",
  "//components/version_info:channel",
  "//extensions/buildflags",
  "//services/service_manager",
  "//ui/base",
]

brave_chrome_common_public_deps = [ "//unknown/components/constants" ]

if (is_android) {
  brave_chrome_common_deps += [ "//components/user_data_importer/common" ]
}

if (!is_android && !is_ios) {
  brave_chrome_common_deps += [ "//unknown/common/importer" ]
}

if (!is_ios) {
  brave_chrome_common_sources += [
    "//unknown/common/brave_content_client.cc",
    "//unknown/common/brave_content_client.h",
  ]

  brave_chrome_common_deps += [
    "//unknown/components/resources",
    "//unknown/components/resources:static_resources_grit",
    "//chrome/common:channel_info",
    "//chrome/common:constants",
    "//components/resources",
    "//content/public/common",
    "//third_party/widevine/cdm:buildflags",
  ]
}
